tests/baselines/reference/parserComputedPropertyName40.errors.txt
parserComputedPropertyName40.ts(2,6): error TS2304: Cannot find name 'a'.


==== parserComputedPropertyName40.ts (1 errors) ====
    class C {
        [a ? "" : ""]() {}
         ~
!!! error TS2304: Cannot find name 'a'.
    }